--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="notify_icon_type_header">indicator type</string>
     <string name="notify_icon_type_blink">blink indicator</string>
     <string name="notify_icon_type_bu">digital indicator</string>
+    <string name="notify_message_template">GPS (%s)</string>
 </resources>
