--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,4 +8,5 @@
     <string name="notify_icon_type_blink">мигающий индикатор</string>
     <string name="notify_icon_type_bu">цифровой индикатор</string>
     <string name="notify_message_template">GPS (%s)</string>
+    <string name="location_perm_request">Приложению необходимо разрешение</string>
 </resources>
