--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,4 +8,8 @@
     <string name="notify_icon_type_blink">мигающий индикатор</string>
     <string name="notify_icon_type_bu">цифровой индикатор</string>
     <string name="notify_message_template">GPS (%s)</string>
+    <string name="show_gps_location_state">иконка геоданных (gps)</string>
+    <string name="show_network_location_state">иконка геоданных (network)</string>
+    <string name="gps_location_active">gps-геоданные включены</string>
+    <string name="network_location_active">network-геоданные включены</string>
 </resources>
